--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -2,42 +2,41 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>VetAdmin</title>
+    <title>Услуги</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
 </head>
 <body>
 
-<div th:case="'ROLE_ADMIN'" th:replace="topnav :: navbar(role='ROLE_ADMIN')"></div>
+<th:block th:switch="${role}">
+    <div th:case="'ROLE_ADMIN'" th:replace="topnav_admin :: navbar"></div>
+    <div th:case="'ROLE_MAJOR'" th:replace="topnav_major :: navbar"></div>
+</th:block>
 
 <div class="container">
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <td>Идентификатор</td>
-            <td>Имя питомца</td>
-            <td>Услуга</td>
-            <td>Место приёма</td>
-            <td>Ветеринар</td>
+            <td>Название услуги</td>
+            <td>Описание услуги</td>
+            <td>Стоимость</td>
             <td></td>
             <td></td>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="req : ${requests}">
-            <td th:text="${req.id}"></td>
-            <td th:text="${req.petName}"></td>
-            <td th:text="${req.serviceName}"></td>
-            <td th:text="${req.appointmentPlace}"></td>
-            <td th:text="${req.veterinarianName}"></td>
+        <tr th:each="serv : ${services}">
+            <td th:text="${serv.name}"></td>
+            <td th:text="${serv.description}"></td>
+            <td th:text="${serv.cost}"></td>
             <td>
-                <form th:method="post" th:action="@{/requests/{reqId}/approve (reqId=${req.id})}">
-                    <button class="btn btn-success" type="submit">Принять</button>
+                <form th:method="post" th:action="@{/services/{serviceId}/change(serviceId=${serv.id})}">
+                    <button class="btn btn-primary" type="submit">Изменить</button>
                 </form>
             </td>
             <td>
-                <form th:method="post" th:action="@{/requests/{reqId}/reject (reqId=${req.id})}">
-                    <button class="btn btn-danger" type="submit">Отклонить</button>
+                <form th:method="post" th:action="@{/services/{serviceId}/remove(serviceId=${serv.id})}">
+                    <button class="btn btn-danger" type="submit">Удалить</button>
                 </form>
             </td>
         </tr>
@@ -51,7 +50,7 @@
         <nav aria-label="Pagination">
             <ul class="pagination justify-content-center">
                 <li class="page-item" th:each="pageNumber : ${pageNumbers}">
-                    <a class="page-link" th:href="@{|/major/requests?page=${pageNumber}&size=7|}" th:text=${pageNumber}>1</a>
+                    <a class="page-link" th:href="@{|/major/services?page=${pageNumber}&size=7|}" th:text=${pageNumber}>1</a>
                 </li>
             </ul>
         </nav>
