--- a/src/main/resources/templates/major/services.html
+++ b/src/main/resources/templates/major/services.html
@@ -30,32 +30,35 @@
             <td th:text="${serv.description}"></td>
             <td th:text="${serv.cost}"></td>
             <td>
-                <form th:method="post" th:action="@{/services/{serviceId}/change(serviceId=${serv.id})}">
+                <form th:method="get" th:action="@{|/major/services/${serv.id}/update|}">
                     <button class="btn btn-primary" type="submit">Изменить</button>
                 </form>
             </td>
             <td>
-                <form th:method="post" th:action="@{/services/{serviceId}/remove(serviceId=${serv.id})}">
+                <form th:method="get" th:action="@{|/major/services/${serv.id}/remove|}">
                     <button class="btn btn-danger" type="submit">Удалить</button>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
-</div>
 
-<div class="row" th:fragment="pagination">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-        <nav aria-label="Pagination">
-            <ul class="pagination justify-content-center">
-                <li class="page-item" th:each="pageNumber : ${pageNumbers}">
-                    <a class="page-link" th:href="@{|/major/services?page=${pageNumber}&size=7|}" th:text=${pageNumber}>1</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="row" th:fragment="pagination">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <nav aria-label="Pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:each="pageNumber : ${pageNumbers}">
+                        <a class="page-link" th:href="@{|/major/services?page=${pageNumber}&size=7|}"
+                           th:text=${pageNumber}>1</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-md-2"></div>
     </div>
-    <div class="col-md-2"></div>
+
+    <a class="btn btn-primary" role="button" th:href="@{|/major/services/create|}">Добавить услугу</a>
 </div>
 
 <script crossorigin="anonymous"
