--- a/src/main/resources/templates/major/requests.html
+++ b/src/main/resources/templates/major/requests.html
@@ -13,20 +13,26 @@
     <div th:case="'ROLE_MAJOR'" th:replace="topnav_major :: navbar"></div>
 </th:block>
 
-<div class="container">
+<div class="container mt-2">
     <form th:method="get" th:href="@{|/major/requests|}">
-        <label>
-            <input type="checkbox" name="statuses" value="accept"> Показывать с принятыми<br>
-        </label>
-        <label>
-            <input type="checkbox" name="statuses" value="rejected"> Показывать с исключёнными<br>
-        </label>
-        <label>
-            <input type="checkbox" name="statuses" value="canceled"> Показывать с отменёнными<br>
-        </label>
-        <button class="btn btn-primary" type="submit" value="Применить">Применить</button>
+        <div class="row align-baseline">
+            <div class="d-flex flex-column col">
+                <label>
+                    <input type="checkbox" name="statuses" value="accept"> Показывать с принятыми<br>
+                </label>
+                <label>
+                    <input type="checkbox" name="statuses" value="rejected"> Показывать с исключёнными<br>
+                </label>
+                <label>
+                    <input type="checkbox" name="statuses" value="canceled"> Показывать с отменёнными<br>
+                </label>
+            </div>
+            <div class="col-9">
+                <button class="btn btn-primary" type="submit" value="Применить">Применить</button>
+            </div>
+        </div>
     </form>
-    <table class="table">
+    <table class="table mt-2">
         <thead class="thead-dark">
         <tr>
             <td>Идентификатор</td>
