--- a/src/main/resources/templates/topnav_major.html
+++ b/src/main/resources/templates/topnav_major.html
@@ -9,33 +9,34 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
 </head>
 <body>
-<div th:fragment="navbar (role)">
+<div th:fragment="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand">VETADMIN</a>
-            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler"
                     data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active" th:if="${role == 'ROLE_MAJOR'}">
-                        <a class="nav-link" href="/requests">Заявления</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/major/requests">Заявления</a>
                     </li>
-                    <li class="nav-item" th:if="${role == 'ROLE_ADMIN'}">
-                        <a class="nav-link" href="/clinics">Клиники</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/major/veterinarians">Ветеринары</a>
                     </li>
-                    <li class="nav-item" th:if="${role == 'ROLE_ADMIN'}">
-                        <a class="nav-link" href="/majors">Операторы клиник</a>
-                    </li>
-                    <li class="nav-item" th:if="${role == 'ROLE_MAJOR'}">
-                        <a class="nav-link" href="/veterinarians">Ветеринары</a>
-                    </li>
-                    <li class="nav-item" th:if="${role == 'ROLE_MAJOR'}">
-                        <a class="nav-link" href="/services">Услуги</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/major/services">Услуги</a>
                     </li>
                 </ul>
+            </div>
+
+            <div>
+                <form th:method="get" th:action="@{/logout}">
+                    <button class="btn btn-primary" type="submit">Выйти</button>
+                </form>
             </div>
         </div>
     </nav>
