--- a/src/main/resources/templates/topnav_major.html
+++ b/src/main/resources/templates/topnav_major.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/major/services">Услуги</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/major/veterinarians">Ветеринары</a>
+                    </li>
                 </ul>
             </div>
 
