Исправление ошибок в шаблонах и функционале

--- a/src/main/resources/templates/major/veterinarian.html
+++ b/src/main/resources/templates/major/veterinarian.html
@@ -29,7 +29,7 @@
         <input type="text" class="form-control" id="patronymic" th:field="*{patronymic}">
     </div>
     <div class="form-group">
-        <label for="experience">Отчество (если есть)</label>
+        <label for="experience">Опыт работы (года)</label>
         <input type="number" class="form-control" id="experience" th:field="*{experience}">
     </div>
     <br>
