--- a/src/main/resources/templates/topnav_major.html
+++ b/src/main/resources/templates/topnav_major.html
@@ -10,28 +10,20 @@
 </head>
 <body>
 <div th:fragment="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container">
-            <a class="navbar-brand">VETADMIN</a>
-            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-                    class="navbar-toggler"
-                    data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand text-light fw-bold">VETADMIN</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/major/requests">Заявления</a>
+                        <a class="nav-link text-light" href="/major/requests">Заявления</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/major/veterinarians">Ветеринары</a>
+                        <a class="nav-link text-light" href="/major/veterinarians">Ветеринары</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/major/services">Услуги</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/major/veterinarians">Ветеринары</a>
+                        <a class="nav-link text-light" href="/major/services">Услуги</a>
                     </li>
                 </ul>
             </div>
