--- a/src/main/resources/templates/topnav_admin.html
+++ b/src/main/resources/templates/topnav_admin.html
@@ -10,22 +10,17 @@
 </head>
 <body>
 <div th:fragment="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container">
-            <a class="navbar-brand">VETADMIN</a>
-            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-                    class="navbar-toggler"
-                    data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand text-light fw-bold">VETADMIN</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/admin/clinics}">Клиники</a>
+                        <a class="nav-link text-light" th:href="@{/admin/clinics}">Клиники</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/admin/majors}">Операторы клиник</a>
+                        <a class="nav-link text-light" th:href="@{/admin/majors}">Операторы клиник</a>
                     </li>
                 </ul>
             </div>
