--- a/src/main/resources/templates/topnav_major.html
+++ b/src/main/resources/templates/topnav_major.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="/major/services">Услуги</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="/major/today_appointments">Приёмы сегодня</a>
+                    </li>
                 </ul>
             </div>
 
